<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.duquehenry.petagrammenufragments.ActividadPrincipal">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/appBar">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">
            <ImageView
                android:id="@+id/idToolbarImageViewHuella"
                android:layout_width="@dimen/actionbar_tamano_icono"
                android:layout_height="@dimen/actionbar_tamano_icono"
                android:background="@drawable/huella"/>
            <TextView
                android:id="@+id/textViewNombreApp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/actionbar_padding"
                android:paddingRight="@dimen/actionbar_padding"
                android:text="@string/app_name"
                android:gravity="center"
                android:textColor="@color/textTitle"
                android:textSize="@dimen/actionbar_tamano_icono"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_below="@+id/appBar">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/formulario_nombre"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/formulario_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputLayoutDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editTextDescripcionContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/formulario_mensaje"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttomEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formulario_enviar_comentario"/>
    </LinearLayout>
</RelativeLayout>